--- a/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
+++ b/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
@@ -8,6 +8,7 @@
   <div class="print-area">
     <ejs-grid
       #grid
+      [allowResizing]="true"
       [dataSource]="data"
       query-string="Id"
       [allowExcelExport]="true"
