--- a/src/app/features/accounts/account-form/account-form.component.css
+++ b/src/app/features/accounts/account-form/account-form.component.css
@@ -11,3 +11,10 @@ div.content {
 #accountId {
   width: 100%;
 }
+
+section {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-top: -15px;
+
+}
