--- a/src/app/features/ledgers/ledger/ledger.component.css
+++ b/src/app/features/ledgers/ledger/ledger.component.css
@@ -1,7 +1,9 @@
 section {
-  background-color: #eee;
-  padding: 10px;
+  background-color: #fafafa;
+  /* background-color: #eee; */
+  /* padding: 10px; */
 }
+
 
 label {
   display: block;
