--- a/src/app/features/ledgers/ledger/ledger.component.html
+++ b/src/app/features/ledgers/ledger/ledger.component.html
@@ -64,8 +64,8 @@
               formControlName="Reference"
             />
           </div>
-          <div class="col-1"></div>
-          <div class="col-1" id="post-button">
+          <!-- <div class="col-1"></div> -->
+          <div class="col-2" id="post-button">
             <button
               [disabled]="!ledgerForm.valid"
               id="add-button"
