--- a/src/app/features/account-type/account-type-form/account-type-form.component.html
+++ b/src/app/features/account-type/account-type-form/account-type-form.component.html
@@ -1,63 +1,65 @@
-<form [formGroup]="typeForm" (ngSubmit)="onSubmit()" name="accountForm">
-  <div class="content card m-3">
-    <div class="row">
-      <div class="col-sm-4 col-xs-8">
-        <label for="Catagory"> Catagory</label>
-        <div>
-          <ejs-dropdownlist
-            id="AccountType"
-            name="AccounType"
-            [fields]="accountTypeFields"
-            formControlName="AccountType"
-            [dataSource]="Catagories"
-          ></ejs-dropdownlist>
-          <div
-            class="e-error"
-            *ngIf="AccountType.errors && AccountType.touched"
-          >
-            <div *ngIf="AccountType.errors['required']">
-              *Catagory is Required
+<section>
+  <form [formGroup]="typeForm" (ngSubmit)="onSubmit()" name="accountForm">
+    <div class="content card m-3">
+      <div class="row">
+        <div class="col-sm-4 col-xs-8">
+          <label for="Catagory"> Catagory</label>
+          <div>
+            <ejs-dropdownlist
+              id="AccountType"
+              name="AccounType"
+              [fields]="accountTypeFields"
+              formControlName="AccountType"
+              [dataSource]="Catagories"
+            ></ejs-dropdownlist>
+            <div
+              class="e-error"
+              *ngIf="AccountType.errors && AccountType.touched"
+            >
+              <div *ngIf="AccountType.errors['required']">
+                *Catagory is Required
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-8">
+          <label for="Account type">Account type</label>
+          <div>
+            <input
+              type="text"
+              id="Type"
+              name="Type"
+              class="e-input"
+              formControlName="Type"
+            />
+            <div class="e-error" *ngIf="Type.errors && Type.touched">
+              <div *ngIf="Type.errors['required']">
+                *Account type is Required
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-8">
-        <label for="Account type">Account type</label>
-        <div>
-          <input
-            type="text"
-            id="Type"
-            name="Type"
-            class="e-input"
-            formControlName="Type"
-          />
-          <div class="e-error" *ngIf="Type.errors && Type.touched">
-            <div *ngIf="Type.errors['required']">
-              *Account type is Required
-            </div>
-          </div>
+      <div class="row">
+        <div class="col-12">
+          <label for="status"
+            >Summerize report
+            <ejs-switch
+              formControlName="IsSummary"
+              id="IsSummerize"
+              name="IsSummerize"
+            ></ejs-switch>
+          </label>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <label for="status"
-          >Summerize report
-          <ejs-switch
-            formControlName="IsSummary"
-            id="IsSummerize"
-            name="IsSummerize"
-          ></ejs-switch>
-        </label>
+      <div class="row">
+        <div class="col-12">
+          <app-form-options
+            [submitDisabled]="typeForm.invalid"
+          ></app-form-options>
+        </div>
+        <div class="col-4"></div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-12">
-        <app-form-options
-          [submitDisabled]="typeForm.invalid"
-        ></app-form-options>
-      </div>
-      <div class="col-4"></div>
-    </div>
-  </div>
-</form>
+  </form>
+</section>
