--- a/src/app/features/dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard">
   <div class="row">
     <div
-      class="col-lg-3 col-xs-6"
+      class="col-lg-3 col-sm-4"
       *ngFor="let items of dashboardItems; let i = index"
     >
       <div class="items-panel" [attr.class]="items.name">
