--- a/src/app/shared/form-options/form-options.component.html
+++ b/src/app/shared/form-options/form-options.component.html
@@ -8,6 +8,7 @@
     {{ buttonText }}
   </button>
   <button
+    type="button"
     class="e-warning e-large"
     ejs-button
     [disabled]="cancelDisabled"
@@ -16,11 +17,11 @@
     Cancel
   </button>
   <button
+    type="button"
     class="e-warning e-large"
     ejs-button
     *ngIf="showDelete"
     [disabled]="cancelDisabled"
-    (click)="cancel()"
   >
     Delete
   </button>
