delete row updated

--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -20,6 +20,7 @@
   (actionComplete)="actionEndHandler($event)"
   [allowGrouping]="true"
   [groupSettings]="groupOptions"
+  [editSettings]="editSettings"
 >
   <e-columns>
     <e-column
