account chart grid updated

--- a/src/app/features/accounts/accounts-view/accounts-view.component.css
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.css
@@ -15,3 +15,7 @@
 .e-grid.e-gridhover tr[role='row']:hover {
   background-color: #eee;
 }
+
+.e-groupdroparea.e-grouped.e-lib.e-droppable.e-draggable {
+  display: none;
+}
