--- a/src/app/features/reports/checklist/checklist.component.html
+++ b/src/app/features/reports/checklist/checklist.component.html
@@ -32,7 +32,13 @@
           width="120"
           foreignKeyValue="Debit"
         ></e-column>
-        <e-column field="Date" headerText="Date" width="150"></e-column>
+        <e-column
+          field="Date"
+          headerText="Date"
+          width="150"
+          type="date"
+          format="yMd"
+        ></e-column>
         <e-column
           field="Description"
           headerText="Description"
@@ -40,17 +46,6 @@
           [visible]="true"
         ></e-column>
       </e-columns>
-      <e-aggregates>
-        <e-aggregate>
-          <e-columns>
-            <e-column field="ReferenceNumber" type="sum">
-              <ng-template #footerTemplate let-data
-                >Sum: {{ data.sum }}</ng-template
-              >
-            </e-column>
-          </e-columns>
-        </e-aggregate>
-      </e-aggregates>
     </ejs-grid>
   </div>
 </div>
