account chart excel export created

--- a/src/app/features/accounts/accounts-view/accounts-view.component.css
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.css
@@ -2,6 +2,10 @@
   #accounts_toolbarItems {
     display: none;
   }
+
+  #accounts * {
+    height: auto !important;
+  }
 }
 
 #accounts_content_table {
