updated account view model

--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -1,6 +1,6 @@
 <app-print-header [header]="'Chart of accounts'"></app-print-header>
 <ejs-grid
-  [dataSource]="data | async"
+  [dataSource]="data"
   #grid
   [allowExcelExport]="true"
   id="accounts"
@@ -12,7 +12,6 @@
   [allowResizing]="true"
   allowFiltering="true"
   [showColumnChooser]="true"
- 
   [allowPdfExport]="true"
   (toolbarClick)="toolbarClick($event)"
   [pageSettings]="initialPage"
@@ -42,7 +41,7 @@
       field="AccountId"
       textAlign="left"
       headerText="Account Id"
-      type="number"
+      type="string"
       width="100"
       editable="false"
       filterable="false"
@@ -57,7 +56,6 @@
       headerText="Account Name"
       isPrimaryKey="false"
       type="string"
-      editType="textbox"
       filterable="true"
       editable="true"
       groupable="false"
@@ -69,19 +67,17 @@
       headerText="Category"
       isPrimaryKey="false"
       type="string"
-      editType="textbox"
       filterable="true"
       editable="true"
       [allowGrouping]="false"
       [width]="150"
     ></e-column>
     <e-column
-      field="ParentAccountId"
+      field="ParentAccount"
       textAlign="left"
-      headerText="Parent"
+      headerText="Control Account"
       isPrimaryKey="false"
       type="string"
-      editType="textbox"
       filterable="true"
       editable="true"
       [allowGrouping]="true"
@@ -93,7 +89,7 @@
       textAlign="left"
       headerText="Active"
       isPrimaryKey="false"
-      type="bool"
+      type="boolean"
       editType="booleanedit"
       filterable="true"
       editable="true"
@@ -108,12 +104,11 @@
       isPrimaryKey="false"
       type="datetime"
       [format]="'yMd'"
-      editType="textbox"
       filterable="true"
       editable="true"
       groupable="false"
       [width]="80"
-      [visible]="false"
+      [visible]="true"
     ></e-column>
     <e-column
       field="DateUpdated"
@@ -122,10 +117,9 @@
       isPrimaryKey="false"
       type="date"
       [format]="'yMd'"
-      editType="textbox"
       filterable="true"
       editable="true"
-      [visible]="false"
+      [visible]="true"
       groupable="false"
       [width]="80"
     ></e-column>
