--- a/src/app/features/reports/balance-sheet/balance-sheet.component.css
+++ b/src/app/features/reports/balance-sheet/balance-sheet.component.css
@@ -23,3 +23,9 @@ table {
 .e-control.e-btn.e-lib {
   margin-top: 10px;
 }
+
+.table-section {
+  background: white;
+  padding-left: 35px;
+  padding-right: 40px;
+}
