--- a/src/app/features/reports/income-statment/income-statment.component.css
+++ b/src/app/features/reports/income-statment/income-statment.component.css
@@ -22,3 +22,9 @@ table {
 .e-control.e-btn.e-lib {
   margin-top: 10px;
 }
+
+.table-section {
+  background: white;
+  padding-left: 40px;
+  padding-right: 40px;
+}
