--- a/src/app/features/reports/income-statment/income-statment.component.html
+++ b/src/app/features/reports/income-statment/income-statment.component.html
@@ -8,39 +8,41 @@
   </div>
 </div>
 <app-print-header [header]="'Income statment'"></app-print-header>
-<table class="table table-borderless">
-  <thead>
-    <tr>
-      <th scope="col">Type</th>
-      <th scope="col">Amount</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>Revenue</th>
-    </tr>
-    <tr *ngFor="let revenue of data?.Revenue">
-      <td>{{ revenue.AccountType }}</td>
-      <td>{{ revenue.Amount | currency: "":"" }}</td>
-    </tr>
-    <tr>
-      <td>Total revenue:</td>
-      <td>{{ data?.TotalRevenue | currency: "":"" }}</td>
-    </tr>
-    <tr>
-      <th>Expense</th>
-    </tr>
-    <tr *ngFor="let expense of data?.Expense">
-      <td>{{ expense.AccountType }}</td>
-      <td>{{ expense.Amount | currency: "":"" }}</td>
-    </tr>
-    <tr>
-      <td>Total Expense:</td>
-      <td>{{ data?.TotalExpense | currency: "":"" }}</td>
-    </tr>
-    <tr>
-      <td>Net Surplus:</td>
-      <td>{{ data?.NetSurplus | currency: "":"" }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="table-section">
+  <table class="table table-borderless">
+    <thead>
+      <tr>
+        <th scope="col">Type</th>
+        <th scope="col">Amount</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>Revenue</th>
+      </tr>
+      <tr *ngFor="let revenue of data?.Revenue">
+        <td>{{ revenue.AccountType }}</td>
+        <td>{{ revenue.Amount | currency: "":"" }}</td>
+      </tr>
+      <tr>
+        <td>Total revenue:</td>
+        <td>{{ data?.TotalRevenue | currency: "":"" }}</td>
+      </tr>
+      <tr>
+        <th>Expense</th>
+      </tr>
+      <tr *ngFor="let expense of data?.Expense">
+        <td>{{ expense.AccountType }}</td>
+        <td>{{ expense.Amount | currency: "":"" }}</td>
+      </tr>
+      <tr>
+        <td>Total Expense:</td>
+        <td>{{ data?.TotalExpense | currency: "":"" }}</td>
+      </tr>
+      <tr>
+        <td>Net Surplus:</td>
+        <td>{{ data?.NetSurplus | currency: "":"" }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
