updated system lookup view

--- a/src/app/features/lookups/lookup-view/lookup-view.component.html
+++ b/src/app/features/lookups/lookup-view/lookup-view.component.html
@@ -9,6 +9,6 @@
   [enableSearching]="true"
   [showColumnChooser]="true"
   [enableSorting]="true"
-  (dataQueried)="filterLookup($event)"
+  (dataStateChaged)="onDataStateChanged($event)"
 >
 </app-data-view>
