updated ledger entry view

--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -9,6 +9,6 @@
   [showPrint]="true"
   [enableSearching]="true"
   [enablePaging]="true"
-  (dataQuired)="dataQuiredHandler($event)"
+  (dataStateChaged)="onDataStateChanged($event)"
   [showColumnChooser]="true"
 ></app-data-view>
