--- a/src/app/shared/data-view/data-view.component.html
+++ b/src/app/shared/data-view/data-view.component.html
@@ -1,6 +1,6 @@
 <div class="title"></div>
 <ejs-grid
-  [dataSource]="data | async"
+  [dataSource]="data"
   #grid
   id="dataview"
   [editSettings]="editSettings"
