updated checklist report view

--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -3,6 +3,7 @@
   [data]="data"
   [columnsList]="columnBluePrint"
   [showAdd]="true"
+  [enableSorting]="true"
   [showUpdate]="true"
   [showDelete]="true"
   (deleteRecord)="deleteLedgerEntry($event)"
