--- a/src/app/shared/filter-option/filter-option.component.html
+++ b/src/app/shared/filter-option/filter-option.component.html
@@ -105,7 +105,7 @@
                         type="button"
                         ejs-button
                         class="e-pluse e-info"
-                        (click)="filter()"
+                        (click)="prepareFilter()"
                       >
                         Search
                       </button>
