ledger autocomplete updated

--- a/src/app/features/account-type/account-type-form/account-type-form.component.html
+++ b/src/app/features/account-type/account-type-form/account-type-form.component.html
@@ -55,6 +55,7 @@
       <div class="row">
         <div class="col-12">
           <app-form-options
+            [isUpdate]="isUpdate"
             [submitDisabled]="typeForm.invalid"
           ></app-form-options>
         </div>
