--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -22,6 +22,8 @@
   [groupSettings]="groupOptions"
   [editSettings]="editSettings"
   [height]="700"
+  databound="databound"
+  action-complete="actioncomplete"
 >
   <e-columns>
     <e-column
