--- a/src/app/features/lookups/lookup-form/lookup-form.component.html
+++ b/src/app/features/lookups/lookup-form/lookup-form.component.html
@@ -71,6 +71,7 @@
       </div>
 
       <app-form-options
+        [isUpdate]="isUpdate"
         [submitDisabled]="lookupForm.invalid"
       ></app-form-options>
 
