--- a/src/app/features/account-catagory/account-catagory-form/account-catagory-form.component.html
+++ b/src/app/features/account-catagory/account-catagory-form/account-catagory-form.component.html
@@ -45,6 +45,7 @@
       <div class="row">
         <div class="col-12">
           <app-form-options
+            [isUpdate]="isUpdate"
             [submitDisabled]="catagoryForm.invalid"
           ></app-form-options>
         </div>
