fixed consolidated trial balance report

--- a/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
+++ b/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
@@ -19,7 +19,7 @@
       [toolbar]="toolbar"
       [filterSettings]="filterOptions"
       (toolbarClick)="clickHandler($event)"
-      (filterChanged)="onDataStateChange($event)"
+      (dataStateChange)="onDataStateChange($event)"
     >
       <e-columns>
         <e-column
